added loading indicator

--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -1,3 +1,7 @@
+<div ng-show="!profile">
+    <img src="img/ajax-loader.gif" alt="loading profile">
+</div>
+<div ng-show="profile">
     <table class="table table-hover table-striped">
       <tr>
         <td>
@@ -25,3 +29,5 @@
         </td>
       </tr>
     </table>
+
+</div>
